k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: distributed-math
  namespace: distributed-math
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - math.d0ku.org
    secretName: distributed-math-base-tls
  rules:
  - host: math.d0ku.org
    http:
      paths:
        - path: /
          backend:
            serviceName: expr
            servicePort: 8080
